openpearl-code/testsuite/must_not_compile/01_typeFixed/000_length_fixed_negative.expect
000_length_fixed_negative.prl:5:12: ERROR : Syntax error : precision for FIXED must be between 0 and 63
DCL f FIXED(-1);
            ^
